2011-02-28  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: add first network test, improve harness.
        https://bugs.webkit.org/show_bug.cgi?id=55306

        * http/tests/inspector/inspector-test.js:
        (initialize_InspectorTest.InspectorTest.assertGreaterOrEqual):
        * http/tests/inspector/network/network-size-expected.txt: Added.
        * http/tests/inspector/network/network-size.html: Added.
        * http/tests/inspector/network/network-timing-expected.txt: Added.
        * http/tests/inspector/network/network-timing.html: Added.
        * http/tests/inspector/network/resources/resource.php: Added.

2011-02-27  Aparna Nandyal  <aparna.nand@wipro.com>

        Reviewed by Antonio Gomes.

        [Qt] QtTestBrowser - Horizontal scrollbar disappears on navigating pages using Back/Forward
        https://bugs.webkit.org/show_bug.cgi?id=53917

        The bug got fixed by other changes. Adding test case to avoid
        regressions in the future.

        * fast/overflow/horizontal-scroll-after-back-expected.txt: Added.
        * fast/overflow/horizontal-scroll-after-back.html: Added.

2011-02-27  Adam Roben  <aroben@apple.com>

        Add Windows expected failure results for fast/events/pageshow-pagehide-on-back-cached.html

        <http://webkit.org/b/55329> tracks the failure.

        * platform/win/fast/events/pageshow-pagehide-on-back-cached-expected.txt: Added.

2011-02-27  Adam Roben  <aroben@apple.com>

        Add Windows expected failure results for fast/images/support-broken-image-delegate.html

        <http://webkit.org/b/55324> tracks the failure.

        * platform/win/fast/images/support-broken-image-delegate-expected.txt: Added.

2011-02-27  Adam Roben  <aroben@apple.com>

        Remove Windows-specific html5lib results

        I suspect these haven't been needed since r77781.

        * platform/win/html5lib/runner-expected.txt: Removed.
